2008-10-11	Brian Tarricone <bjt23@cornell.edu>

	* (lots): Migrate xfce4-session to use xfconf.  Combine session,
	  splash, and autostart dialog into one glade-ified (mostly) dialog.

2008-10-08	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session-logout/{main.c,xfce4-session-logout.1}: Add
	  --fast command-line option to instruct the session manager
	  not to save the session.

2008-10-07	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Add separate deps on dbus and dbus-glib.
	* xfce4-session-logout/Makefile.am,xfce4-session/Makefile.am:
	  Fix/add dbus/dbus-glib deps.
	* xfce4-session-logout/main.c: Make xfce4-session-logout use
	  the more flexible dbus interface for shutting down, and add
	  command-line options to take action while skipping the
	  logout confirmation dialog.
	* xfce4-session-logout/xfce4-session-logout.1: Update manual
	  page to reflect new command-line options.

2008-10-07	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in,xfce4-session/Makefile.am: Add check for
	  gnome-keyring support library.
	* xfce4-session/xfsm-compat-gnome.c: Don't start a new
	  gnome-keyring instance if it's already running (bug 3007,
	  patch from Olivier Fourdan <fourdan@xfce.org>).

2008-10-07	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-shutdown-helper.c: Remove the HAVE_DBUS
	  conditionals when doing HAL operations, since it's not
	  defined anymore because we require dbus.  This should make
	  HAL-based shutdown work again.

2008-10-07	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Check for <asm/unistd.h> and
	  <linux/ioprio.h>.
	* xfce4-session/xfsm-manager.c: If available, sync() disks
	  early on in the shutdown process, but only if we can
	  set the sync() process' i/o priority to 'idle'.  Available
	  only on Linux (bug 4313).
	* xfce4-session/shutdown.c: If we didn't have ioprio_set(),
	  then we do sync() right before quitting.

2008-10-06	Brian Tarricone <bjt23@cornell.edu>
