@@ -1,3 +1,9 @@
+2008-10-12	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session/xfsm-manager.c: Return a useful error string from
+	  xfsm_manager_load_failsafe() and display to user in an actual
+	  message dialog box rather than to stderr.
+
 2008-10-11	Brian Tarricone <bjt23@cornell.edu>
 
 	* (lots): Migrate xfce4-session to use xfconf.  Combine session,
